k8s/haproxy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: haproxy
  labels:
    name: haproxy
    app: haproxy-loadbalancer
