k8s/haproxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-ingress
  namespace: haproxy
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"
spec:
  ingressClassName: nginx
  rules:
  - host: haproxy.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: haproxy-service
            port:
              number: 8888
      - path: /stats
        pathType: Prefix
        backend:
          service:
            name: haproxy-service
            port:
              number: 8404
  tls:
  - hosts:
    - haproxy.local
    secretName: haproxy-tls
